fix wrapp  text

--- a/assets/styles/pages/_journey-result-page.scss
+++ b/assets/styles/pages/_journey-result-page.scss
@@ -4,7 +4,7 @@
 
 .journey-answers .govuk-summary-list__value:last-child{
 
-    width: 15%;
+    width: 17%;
 }
 
 .journey-answers .govuk-summary-list__value:last-child a{
